//声明protobuf版本为proto3
syntax = "proto3";

//引入实体定义
import "helloWorld_dto.proto";

//如果为true时message会生成多个类
option java_multiple_files = true;

//此处要注意和user_dto.proto相同包，否则找不到实体
package com.fox.grpc.helloworld.dto;

//服务定义生成的包
option java_package = "com.fox.grpc.helloworld.service";

//指定生成Java的类名，如果没有该字段则根据proto文件名称以驼峰的形式生成类名
option java_outer_classname = "HelloWorldProto";

//服务定义
service HelloWorld {

  //调用接口
  rpc say (GetRequest) returns (GetResponse) {}




}